# lingua_1

./: .env.example  .gitignore  ARCHITECTURE.md  ASR_INTEGRATION_COMPLETE_2026_01_19.md  ELECTRON_NODE_DOCS_REORGANIZATION_2026_01_19.md  FINAL_SUMMARY_2026_01_19.md  HEARTBEAT_TAG_ANALYSIS_2026_01_19.md  HOT_PLUGGABLE_QUICK_START_2026_01_19.md  LOGGING_COMPLETE_2026_01_19.md  MODEL_PATH_UPDATE_2026_01_19.md  NODE_SERVICE_CARD_ISSUE_FIX_2026_01_19.md  README.md  RENAME_COMPLETE_2026_01_19.md  REORGANIZATION_SUMMARY_2026_01_19.md  SEMANTIC_REPAIR_SERVICE_REORGANIZATION_COMPLETE_2026_01_19.md  SERVICE_DISCOVERY_FLOW_2026_01_19.md  TYPESCRIPT_COMPILATION_FIX_2026_01_19.md  UNIFIED_SERVICE_COMPLETE_2026_01_19.md  analyze_finalize_timing.py  analyze_first_audio_playback.md  analyze_result.txt  audio.rs  finalize_timing_analysis.md  fix_recommendations.md  integration_test_no_results_analysis.md  job_details_report.txt  job_timing_report.md  lock_contention_analysis.md  observability.json.example  output_translated_audio.pcm  temp_core.rs  temp_implementation.txt  temp_node_protocol.txt  web_audio_analysis_summary.md  三端脚本  审计总结_请先看这个.md
central_server/scheduler/: 1  Cargo.toml  DASHBOARD.md  FILE_RECOVERY_NEEDED.md  TEST_COMPARISON_ANALYSIS.md  TEST_DEBUG_FINDINGS.md  TEST_FIXES_FINAL.md  TEST_ISSUE_SUMMARY.md  compute-power.html  config-hardcoding-removal.toml  config.toml  dashboard.html  full_check.txt  languages.html  models.html  test_commands.ps1
central_server/scheduler/docs/: BACKWARD_COMPATIBILITY_REMOVAL.md  COMPATIBILITY_REMOVAL_SUMMARY.md  DESIGN_DOC_VS_IMPLEMENTATION_ANALYSIS.md  DOCUMENTATION_CLEANUP_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_REORGANIZATION_PLAN.md  DOCUMENTATION_REORGANIZATION_STATUS.md  DUPLICATE_JOB_CREATION_ISSUE_REPORT.md  HEARTBEAT_OPTIMIZATION_FINAL_TEST.md  IMPLEMENTATION_ROADMAP.md  JOB_FSM_STATE_MAPPING.md  LOCK_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  NODE_CAPABILITIES_REDIS_MIGRATION.md  NODE_CAPACITY_CONTROL_MECHANISM.md  NODE_CLIENT_ALIGNMENT_CHECK.md  NODE_REGISTRATION.md  NODE_REGISTRATION_AND_LOCK_ANALYSIS.md  NODE_REGISTRATION_AND_POOL_GENERATION.md  NODE_REGISTRY_LOCK_OPTIMIZATION.md  OPS.md  PERFORMANCE_ISSUE_GROUP_MANAGER_LOCK_CONTENTION.md  PHASE3_EXPLANATION.md  PHASE3_POOL_SESSION_BINDING_OPTIMIZATION.md  POOL_ALLOCATION_LOOP_ANALYSIS.md  POOL_ARCHITECTURE.md  POOL_ARCHITECTURE_AND_TASK_DISPATCH.md  POOL_MULTI_INSTANCE.md  POOL_REDIS_SYNC.md  README.md  REDIS_VERSION_WARNING.md  RUNTIME_INITIALIZATION_FIX.md  SCHEDULER_LOCK_OPTIMIZATION_COMBINED_DESIGN_v1.md  SCHEDULER_PATH_REFACTOR_PLAN.md  SCHEDULER_V4_1_F2F_POOL_AND_RESERVATION_DESIGN.md  STALE_CODE_FIX_SUMMARY.md  TEST_RESULTS.md  TEST_SUMMARY_FINAL.md  TEST_TIMEOUT_FIX.md  UNIT_TEST_FINAL_RESULTS.md  WARNINGS_CLEANUP_SUMMARY.md  (+6 more)
central_server/scheduler/docs/aggregator/: AGGREGATOR.md  README.md  aggregator_middleware.md  continuity_comparison.md  issue_analysis.md  issue_merge_fix.md  utterance_aggregator.md
central_server/scheduler/docs/architecture/: ARCHITECTURE.md  DECISION_SUMMARY.md  FLOW_DIAGRAMS.md  NODE_AND_TASK_MANAGEMENT_FLOW_DECISION.md  NODE_JOB_FLOW_MERGED_TECH_SPEC_v1.0.md  NODE_RUNTIME_SNAPSHOT_ARCHITECTURE_v1.md  OPTIMIZATION_HISTORY.md  POOL.md  POOL_ARCHITECTURE.md  README.md  SCHEDULER_ARCHITECTURE_V3_REFACTOR_DECISION.md  (+4 more)
central_server/scheduler/examples/: test_e2e_integration.rs  test_redis_queries.rs  test_selection_redis_direct.rs  test_selection_with_pool.rs  test_stress_1000.rs
central_server/scheduler/ops/: README.md
central_server/scheduler/scripts/: phase2_cluster_acceptance.ps1  phase2_smoketest.ps1  phase2_ws_e2e.ps1  redis_clear_lingua.lua  redis_clear_lingua.ps1  release_gate.ps1  test_quick.ps1
central_server/scheduler/src/: app_state.rs  audio_buffer.rs  cluster.html  config.rs  connection_manager.rs  dashboard.html  dashboard_snapshot.rs  dispatcher.rs  group_manager.rs  job_timeout.rs  lib.rs  main.rs  metrics.rs  model_not_available.rs  node_status_manager.rs  pairing.rs  phase2.rs  pool_hashing.rs  prometheus_metrics.rs  redis_runtime.rs  room_manager.rs  service_catalog.rs  session.rs  stats.rs
central_server/scheduler/tests/: README.md  group_manager_test.rs  job_no_text_assigned_test.rs  minimal_scheduler_integration_test.rs  minimal_scheduler_pool_registration_test.rs  minimal_scheduler_test.rs  phase3_3.rs
central_server/scheduler/tests.disabled/: README.md  job_dynamic_timeout_test.rs  minimal_scheduler_test.rs  module_resolver_test.rs  phase3_3.rs  stage1_1.rs
expired/api-gateway/: Cargo.toml  README.md
expired/api-gateway/src/: main.rs  rate_limit.rs  scheduler_client.rs  tenant.rs
node-inference/: Cargo.toml
node-inference/src/: asr.rs  http_server.rs  inference.rs  language_detector.rs  lib.rs  main.rs  modules.rs  nmt.rs  pipeline.rs  speaker.rs  speech_rate.rs  tts.rs  vad.rs  vad.rs.backup_1.16.3
node-inference/tests/: LOCAL_MODEL_TESTING.md  README.md  integration_test.rs  tts_test.rs
node-inference/tests/stage1.3/: TEST_REPORT.md
node-inference/tests/stage1.4/: TEST_REPORT.md
node-inference/tests/stage2.1.2/: inference_partial_callback_test.rs  mod.rs
scheduler/: Cargo.toml  config.toml
scheduler/src/: app_state.rs  audio_buffer.rs  config.rs  connection_manager.rs  dispatcher.rs  group_manager.rs  lib.rs  main.rs  messages.rs  model_hub.rs  module_resolver.rs  node_registry.rs  node_status_manager.rs  pairing.rs  room_manager.rs  session.rs  websocket.rs
scheduler/src/messages/: common.rs  error.rs  mod.rs  ui_event.rs
scheduler/src/node_registry/: mod.rs  types.rs
scheduler/src/websocket/: mod.rs  node_handler.rs  session_handler.rs
scheduler/tests/: README.md  capability_state_test.rs  group_manager_test.rs  stage3_2.rs
scheduler/tests/stage1.1/: TEST_REPORT.md  connection_manager_test.rs  dispatcher_test.rs  mod.rs  node_registry_test.rs  result_queue_test.rs  session_test.rs
scheduler/tests/stage1.2/: message_format_test.rs
scheduler/tests/stage2.1.2/: asr_partial_message_test.rs
scheduler/tests/stage3.2/: mod.rs  node_selection_test.rs
(+5107 files in other folders)
