[package]
name = "lingua-node-inference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inference-service"
path = "src/main.rs"

[lib]
name = "lingua_node_inference"
path = "src/lib.rs"

[dependencies]
# 异步运行时（严格按照原项目版本）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "rt", "time", "process", "fs"] }
async-trait = "0.1"

# 序列化（严格按照原项目版本）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ONNX Runtime（模型推理，用于 VAD）
# 严格按照原项目版本：1.16.3（已撤回，需要通过 Cargo.lock 锁定）
# 注意：需要在 Cargo.lock 中手动添加 ort 1.16.3 的条目（从原项目复制）
# 如果需要 GPU 加速，启用 cuda feature（需要系统已安装 CUDA）
ort = { version = "1.16.3", default-features = false, features = ["download-binaries"] }

# Whisper ASR 支持（启用 CUDA GPU 加速，严格按照原项目版本）
whisper-rs = { version = "0.15.1", features = ["cuda"] }

# 音频处理（严格按照原项目版本）
hound = "3.5"  # WAV 文件读取
ndarray = "0.15"

# HTTP 客户端（用于调用 TTS 服务，严格按照原项目版本）
reqwest = { version = "0.11", features = ["json"] }

# HTTP 服务器（用于 Electron 节点调用）
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"

# Base64 编码（严格按照原项目版本）
base64 = { version = "0.21", features = ["alloc"] }

# 错误处理（严格按照原项目版本）
anyhow = "1"
thiserror = "1"

# 日志（严格按照原项目版本）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 时间处理（原项目未使用，但我们需要用于模块状态）
chrono = { version = "0.4", features = ["serde"] }

