[package]
name = "lingua-scheduler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scheduler"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "rt", "time", "process", "fs", "signal"] }
async-trait = "0.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP 和 WebSocket 服务器
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"
http = "1"

# 错误处理
anyhow = "1"
thiserror = "1"

# UUID 生成
uuid = { version = "1.0", features = ["v4", "v5", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "time"] }
tracing-appender = "0.2"
file-rotate = "0.7"

# 配置管理
config = "0.14"

# 数据库（可选，先用内存存储）
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Base64 编码
base64 = { version = "0.21", features = ["alloc"] }

# HTTP 客户端（用于调用Model Hub API）
reqwest = { version = "0.11", features = ["json"] }

# Futures 工具
futures-util = "0.3"

# 懒加载静态变量（用于 MODULE_TABLE）
lazy_static = "1.4"

# 随机数生成（用于房间码生成）
rand = "0.8"

# Prometheus 指标（方向B）
prometheus = "0.13"

# Phase 2：Redis（Cluster-ready + Streams）
redis = { version = "0.25", features = ["tokio-comp", "cluster-async"] }

# 并发HashMap（用于SessionManager）
dashmap = "5.5"

# 小向量优化（用于RuntimeSnapshot）
smallvec = "1.11"

[features]
default = []
# 测试辅助功能，用于集成测试访问测试辅助方法
test-helpers = []

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "rt", "time", "process", "fs", "test-util"] }

