[package]
name = "lingua-api-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP 和 WebSocket 服务器
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }
tokio-tungstenite = "0.21"
http = "1"

# 错误处理
anyhow = "1"
thiserror = "1"

# UUID 生成
uuid = { version = "1.0", features = ["v4", "serde"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 配置管理
config = "0.14"

# Base64 编码
base64 = { version = "0.21", features = ["alloc"] }

# 哈希算法（API Key）
sha2 = "0.10"

# 并发数据结构
dashmap = "5"

# Futures 工具
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"

