[package]
name = "lingua-node-inference"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "inference-service"
path = "src/main.rs"

[lib]
name = "lingua_node_inference"
path = "src/lib.rs"

[dependencies]
# 异步运行时（严格按照原项目版本）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "rt", "time", "process", "fs"] }
async-trait = "0.1"

# 序列化（严格按照原项目版本）
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ONNX Runtime（模型推理，用于 VAD）
# 升级到 2.0.0-rc.10 以支持 CUDA 12.4（对应 ONNX Runtime 1.22，需要 cuDNN 9.x）
# 注意：如果使用 cuDNN 8.x，可能需要升级 cuDNN 到 9.x
# 启用 cuda feature 以支持 GPU 加速（需要系统已安装 CUDA）
ort = { version = "2.0.0-rc.10", default-features = false, features = ["download-binaries", "cuda"] }

# Whisper ASR 支持（启用 CUDA GPU 加速，严格按照原项目版本）
whisper-rs = { version = "0.15.1", features = ["cuda"] }

# 音频处理（严格按照原项目版本）
hound = "3.5"  # WAV 文件读取
ndarray = "0.15"

# HTTP 客户端（用于调用 TTS 服务，严格按照原项目版本）
reqwest = { version = "0.11", features = ["json"] }

# HTTP 服务器（用于 Electron 节点调用）
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-util = "0.3"

# Base64 编码（严格按照原项目版本）
base64 = { version = "0.21", features = ["alloc"] }

# 错误处理（严格按照原项目版本）
anyhow = "1"
thiserror = "1"

# 日志（严格按照原项目版本）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "time"] }
tracing-appender = "0.2"
file-rotate = "0.7"

# 时间处理（原项目未使用，但我们需要用于模块状态）
chrono = { version = "0.4", features = ["serde"] }

# 懒加载静态变量（用于 MODULE_TABLE）
lazy_static = "1.4"

# 正则表达式（用于文本过滤）
regex = "1"

# Opus 编解码支持
opus = "0.3"

